compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_string_prefix_pattern_alias.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1381
expression: "let assert \"prefix\" as thePrefix <> _suffix = \"prefix-suffix\""
snapshot_kind: text
---
----- SOURCE CODE
let assert "prefix" as thePrefix <> _suffix = "prefix-suffix"

----- ERROR
error: Invalid variable name
  ┌─ /src/one/two.gleam:1:24
  │
1 │ let assert "prefix" as thePrefix <> _suffix = "prefix-suffix"
  │                        ^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9, or
_.
Try: the_prefix
