compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_tuple_pattern_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1351
expression: "let #(a, secondValue) = #(1, 2)"
snapshot_kind: text
---
----- SOURCE CODE
let #(a, secondValue) = #(1, 2)

----- ERROR
error: Invalid variable name
  ┌─ /src/one/two.gleam:1:10
  │
1 │ let #(a, secondValue) = #(1, 2)
  │          ^^^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9, or
_.
Try: second_value
