compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_variable_discard_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1301
expression: let _boringNumber = 72
snapshot_kind: text
---
----- SOURCE CODE
let _boringNumber = 72

----- ERROR
error: Invalid discard name
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let _boringNumber = 72
  │     ^^^^^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _boring_number
